[package]
name = "lookup"
version = "0.1.0"
authors = ["freddd"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
trust-dns-resolver = "0.20.3"
clap = "2.33.3"
prettytable-rs = "^0.8"
